# einksysstat

./: .gitignore  DEV_Config.c  DEV_Config.h  Debug.h  Makefile.am  README  README.md  TAGS  actions.c  actions.h  chain.c  chain.h  config.h  configure  configure.ac  demoparser.c  device.c  device.h  dump_utils.c  dump_utils.h  eink-find-devices.sh  eink_sysstat.config  eink_sysstat.h  einksysstat.c  einksysstat.conf.disks  einksysstat.conf.id  einksysstat.conf.rotate  einksysstat.conf.sizes  einksysstat.conf.temps  einksysstat.config.md  einksysstat.md  gadgets.c  gadgets.h  identify  ironman.c  ironman.stats  lexer.l  module.c  module.h  old_eink_sysstat.h  (+16 more)
Device/: EPD_1in54b_V2.c  Makefile.am  TAGS
Fonts/: Makefile.am  TAGS
GUI/: GUI_Paint.c  GUI_Paint.h  Makefile.am  TAGS
